; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/libs/vgfont/extr_font.c_graphics_resource_text_dimensions_ext.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/libs/vgfont/extr_font.c_graphics_resource_text_dimensions_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @graphics_resource_text_dimensions_ext(i32 %0, i8* %1, i32 %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  store i32 %0, i32* %7, align 4
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  store i32 -1, i32* %16, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @gx_priv_save(i32* %13, i32 %18)
  %20 = load i8*, i8** %8, align 8
  %21 = load i32, i32* %12, align 4
  %22 = call i32* @find_font(i8* %20, i32 %21)
  store i32* %22, i32** %17, align 8
  %23 = load i32*, i32** %17, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %26, label %25

25:                                               ; preds = %6
  br label %35

26:                                               ; preds = %6
  %27 = load i32*, i32** %17, align 8
  %28 = load i8*, i8** %8, align 8
  %29 = load i32, i32* %9, align 4
  %30 = call i32 @vgft_get_text_extents(i32* %27, i8* %28, i32 %29, double 0.000000e+00, double 0.000000e+00, i32* %14, i32* %15)
  %31 = load i32, i32* %14, align 4
  %32 = load i32*, i32** %10, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i32, i32* %15, align 4
  %34 = load i32*, i32** %11, align 8
  store i32 %33, i32* %34, align 4
  store i32 0, i32* %16, align 4
  br label %35

35:                                               ; preds = %26, %25
  %36 = call i32 @gx_priv_restore(i32* %13)
  %37 = load i32, i32* %16, align 4
  ret i32 %37
}

declare dso_local i32 @gx_priv_save(i32*, i32) #1

declare dso_local i32* @find_font(i8*, i32) #1

declare dso_local i32 @vgft_get_text_extents(i32*, i8*, i32, double, double, i32*, i32*) #1

declare dso_local i32 @gx_priv_restore(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
